--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 	margin: 0;
 	padding: 0;
     margin-top: 180px;
+    margin: 0 15px;
     
 }
 a{
@@ -115,7 +116,6 @@ h1::before {
 
 
 .section{
-    margin: 0 15px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -355,11 +355,11 @@ h2 {
 #footer {
     text-align: center;
     margin-top: 50px;
-    left: 0; bottom: 0;
+    left: 0;
+    bottom: 0;
     padding: 15px;
     background: #000;
     color: #fff;
-    width: 100%;
 }
 
 
