--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
-/* old-standard-tt-regular - latin_cyrillic */
+
 @font-face {
   font-family: 'Old Standard TT';
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('../fonts/old-standard-tt-v13-latin_cyrillic-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/old-standard-tt-v13-latin_cyrillic-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('../fonts/old-standard-tt-v13-latin_cyrillic-regular.woff2') format('woff2'),
+       url('../fonts/old-standard-tt-v13-latin_cyrillic-regular.woff') format('woff');
 }
-/* old-standard-tt-700 - latin_cyrillic */
+
 @font-face {
   font-family: 'Old Standard TT';
   font-style: normal;
   font-weight: 700;
   src: local(''),
-       url('../fonts/old-standard-tt-v13-latin_cyrillic-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/old-standard-tt-v13-latin_cyrillic-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('../fonts/old-standard-tt-v13-latin_cyrillic-700.woff2') format('woff2'),
+       url('../fonts/old-standard-tt-v13-latin_cyrillic-700.woff') format('woff'); 
 }
 
 
